==> apache/nuttx/arch/arm/src/lpc43xx/lpc43_rtc.c <==
#include <nuttx/config.h>
#include <time.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/time.h>
#include <arch/board/board.h>
#include "arm_arch.h"
#include "arm_internal.h"
#include "chip.h"
#include "hardware/lpc43_creg.h"
#include "hardware/lpc43_rtc.h"
#include "lpc43_rtc.h"

static void rtc_dumpregs(FAR const char *msg)
{
  rtcinfo("%s:\n", msg);
  rtcinfo("  DOM : %08x\n", (getreg32(LPC43_RTC_DOM) & RTC_DOM_MASK));
  rtcinfo("  DOW : %08x\n", (getreg32(LPC43_RTC_DOW) & RTC_DOW_MASK));
}

int up_rtc_initialize(void)
{
  int ret;

  rtc_dumpregs("On reset");

#ifdef CONFIG_RTC_ALARM
  /* Attach the RTC interrupt handler */

  ret = irq_attach(LPC43M4_IRQ_RTC, rtc_interrupt);
  if (ret == OK)
    {
      up_enable_irq(LPC43M4_IRQ_RTC);
    }
#endif /* CONFIG_RTC_ALARM */

  /* Perform the one-time setup of the RTC */

  ret = rtc_setup();

  /* Configure RTC interrupt to catch alarm interrupts. All RTC interrupts are
   * connected to the EXTI controller.  To enable the RTC Alarm interrupt, the
   * following sequence is required:
   *
   * 1. Configure and enable the EXTI Line 17 in interrupt mode and select the
   *    rising edge sensitivity.
   * 2. Configure and enable the RTC_Alarm IRQ channel in the NVIC.
   * 3. Configure the RTC to generate RTC alarms (Alarm A or Alarm B).
   */

  g_rtc_enabled = true;
  rtc_dumpregs("After Initialization");
  return ret;
}

int up_rtc_getdatetime(FAR struct tm *tp)
{
  rtc_dumpregs("Reading Time");

  /* Convert the RTC time to fields in struct tm format.*/

  tp->tm_sec  = ((getreg32(LPC43_RTC_SEC) & RTC_SEC_MASK));
  tp->tm_min  = ((getreg32(LPC43_RTC_MIN) & RTC_MIN_MASK));
  tp->tm_hour = ((getreg32(LPC43_RTC_HOUR) & RTC_HOUR_MASK));

  /* Now convert the RTC date to fields in struct tm format*/

  tp->tm_mday = ((getreg32(LPC43_RTC_DOM) & RTC_DOM_MASK));
  tp->tm_mon  = ((getreg32(LPC43_RTC_MONTH) & RTC_MONTH_MASK)) - 1;
  tp->tm_year = ((getreg32(LPC43_RTC_YEAR) & RTC_YEAR_MASK)-1900);
  tp->tm_wday = ((getreg32(LPC43_RTC_DOW) & RTC_DOW_MASK));
  tp->tm_yday = ((getreg32(LPC43_RTC_DOY) & RTC_DOY_MASK));

  rtc_dumptime(tp, "Returning");
  return OK;
}

int up_rtc_settime(FAR const struct timespec *tp)
{
  FAR struct tm newtime;

  /* Break out the time values (not that the time is set only to units of seconds) */

  gmtime_r(&tp->tv_sec, &newtime);
  rtc_dumptime(&newtime, "Setting time");

  /* Then write the broken out values to the RTC */

  putreg32(((newtime.tm_sec) & RTC_SEC_MASK), LPC43_RTC_SEC);
  putreg32(((newtime.tm_min) & RTC_MIN_MASK), LPC43_RTC_MIN);
  putreg32(((newtime.tm_hour) & RTC_HOUR_MASK), LPC43_RTC_HOUR);
  putreg32(((newtime.tm_mday) & RTC_DOM_MASK), LPC43_RTC_DOM);
  putreg32((((newtime.tm_mon)+1) & RTC_MONTH_MASK), LPC43_RTC_MONTH);
  putreg32(((newtime.tm_year) & RTC_YEAR_MASK)+1900, LPC43_RTC_YEAR);
  putreg32(((newtime.tm_wday) & RTC_DOW_MASK), LPC43_RTC_DOW);
  putreg32(((newtime.tm_yday) & RTC_DOY_MASK), LPC43_RTC_DOY);

  return OK;
}
